# RUST

./: Cargo.toml  README.md  docker-compose.yml
project/: Dockerfile
project/src/: main.rs
project/src/camera/: camera.rs  mod.rs  text.rs
project/src/keyboard/: mod.rs
project/src/streaming/: handle_websocket.rs  handlers.rs  mod.rs
project/src/streaming/static/: index.html  streaming.css
src/: main.rs
src/camera/: camera.rs  convert_frame.rs  frame_handler.rs  haar_like.rs  mod.rs  text.rs  utils.rs
src/keyboard/: keyboard.rs
src/streaming/: connections.rs  generate_response.rs  handle_websocket.rs  handlers.rs  mod.rs
src/streaming/static/: index.html  style.css  websocket.js
